app posting new adds user object to file

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -43,7 +43,7 @@
     </div>
     <footer class="footer">
       <div class="container">
-        <a href="#">API Friends List</a>&nbsp;|&nbsp;<a
+        <a href="/api/friends">API Friends List</a>&nbsp;|&nbsp;<a
           href="https://github.com/benleone90/FriendFinder"
           >GitHub Repo</a
         >
