--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -21,6 +21,9 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
+
+    <!-- jQuery CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -31,7 +34,7 @@
       <input type="text" id="name" class="form-control" required />
       <br />
       <h4>Link to Photo Image (Required)</h4>
-      <input type="text" id="name" class="form-control" required />
+      <input type="text" id="photo" class="form-control" required />
       <hr />
       <h3 class="font-weight-bold">Question 1</h3>
       <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
@@ -181,18 +184,57 @@
 
     <footer class="footer">
       <div class="container">
-        <a href="#">API Friends List</a>&nbsp;|&nbsp;<a
+        <a href="/api/friends">API Friends List</a>&nbsp;|&nbsp;<a
           href="https://github.com/benleone90/FriendFinder"
           >GitHub Repo</a
         >
       </div>
     </footer>
+
+    <script type="text/javascript">
+      $("#submit").on("click", function() {
+        function validateForm() {
+          var isValid = true;
+          $(".form-control").each(function() {
+            if ($(this).val() === "") {
+              isValid = false;
+            }
+          });
+
+          $(".chosen-select").each(function() {
+            if ($(this).val() === "") {
+              isValid = false;
+            }
+          });
+          return isValid;
+        }
+
+        if (validateForm()) {
+          var userData = {
+            name: $("#name").val(),
+            photo: $("#photo").val(),
+            scores: [
+              $("#q1").val(),
+              $("#q2").val(),
+              $("#q3").val(),
+              $("#q4").val(),
+              $("#q5").val(),
+              $("#q6").val(),
+              $("#q7").val(),
+              $("#q8").val(),
+              $("#q9").val(),
+              $("#q10").val()
+            ]
+          };
+          var currentURL = window.location.origin;
+          $.post(currentURL + "/api/friends/", userData, function(data) {
+            alert("Working...");
+          });
+        }
+      });
+    </script>
+
     <!-- Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
       integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
